IndividualProject/IndividualProject.sdk/.metadata/.plugins/org.eclipse.cdt.ui/IndividualProject.build.log
12:39:35 **** Auto Build of configuration Debug for project IndividualProject ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/tasks.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/tasks.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../IndividualProject_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/tasks.d" -MT"src/tasks.o" -o "src/tasks.o" "../src/tasks.c"
../src/tasks.c: In function 'joystickTask':
../src/tasks.c:40:22: error: 'GPIO1_DEVICE_ID' undeclared (first use in this function); did you mean 'UART_DEVICE_ID'?
  temp_btn = readGpio(GPIO1_DEVICE_ID);
                      ^~~~~~~~~~~~~~~
                      UART_DEVICE_ID
../src/tasks.c:40:22: note: each undeclared identifier is reported only once for each function it appears in
../src/tasks.c:37:5: warning: variable 'temp_btn' set but not used [-Wunused-but-set-variable]
  u8 temp_btn;
     ^~~~~~~~
../src/tasks.c:36:6: warning: variable 'temp_data' set but not used [-Wunused-but-set-variable]
  u16 temp_data;
      ^~~~~~~~~
make: *** [src/subdir.mk:41: src/tasks.o] Error 1

12:39:35 Build Finished (took 516ms)

